cleaned up files

--- a/experiment/template/test_simulation.ipynb
+++ b/experiment/template/test_simulation.ipynb
@@ -458,7 +458,7 @@
     "    'upper_thresh': [1]*len(vials),\n",
     "\n",
     "    'vial_volume': VOLUME, # mL\n",
-    "    'time_interval': 0.1, # hours; time of each iteration\n",
+    "    'time_interval': 0.1, # hours; time of each iteration | may need to adjust lower if pump_wait in custom_script is too short\n",
     "    'max_OD' : 4, # as defined by the carrying capacity of media\n",
     "    'exp_name' : EXP_NAME,\n",
     "    'log_name': os.path.join(EXP_DIR, 'evolver.log'),\n",
@@ -467,57 +467,6 @@
     "simulation = EvolverSimulation(experiment_params)\n",
     "simulation.run_simulation()\n",
     "simulation.plot_data(experiment_params['vials'], 'OD', 'growthrate')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total time taken to run the function 1000 times: 0.001024484634399414 seconds\n",
-      "Average time per iteration: 1.024484634399414e-06 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "\n",
-    "def time_function(iterations, func, *args, **kwargs):\n",
-    "    \"\"\"\n",
-    "    Measure the time it takes to run a function a specified number of times.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - iterations: Number of times to run the function.\n",
-    "    - func: The function to be timed.\n",
-    "    - *args: Positional arguments to pass to the function.\n",
-    "    - **kwargs: Keyword arguments to pass to the function.\n",
-    "\n",
-    "    Returns:\n",
-    "    - elapsed_time: Total time in seconds it took to run the function the specified number of times.\n",
-    "    - time_per_iteration: Average time per iteration in seconds.\n",
-    "    \"\"\"\n",
-    "    start_time = time.time()\n",
-    "    for _ in range(iterations):\n",
-    "        func(*args, **kwargs)\n",
-    "    end_time = time.time()\n",
-    "    elapsed_time = end_time - start_time\n",
-    "    time_per_iteration = elapsed_time / iterations\n",
-    "    return elapsed_time, time_per_iteration\n",
-    "\n",
-    "# Example usage:\n",
-    "# Define a sample function to be timed\n",
-    "def sample_function(x):\n",
-    "    return x ** 2\n",
-    "\n",
-    "# Measure the time it takes to run sample_function 1000 times\n",
-    "iterations = 1000\n",
-    "elapsed_time, time_per_iteration = time_function(iterations, sample_function, 10)\n",
-    "print(f\"Total time taken to run the function {iterations} times: {elapsed_time} seconds\")\n",
-    "print(f\"Average time per iteration: {time_per_iteration} seconds\")"
    ]
   }
  ],
